change file as xlsx and using pandas to read excel

--- a/templates/index.html
+++ b/templates/index.html
@@ -143,7 +143,7 @@
             <h1>隨機分組</h1>
             <form action="{{ url_for('randomize') }}" method="POST" enctype="multipart/form-data">
                 <label class="file-label">
-                    選擇 CSV 文件：
+                    選擇 Excel 文件：
                     <input type="file" name="csv_file" class="file-input" required>
                 </label>
                 <span class="file-name">未選擇文件</span>
