--- a/templates/result.html
+++ b/templates/result.html
@@ -4,7 +4,7 @@
     <title>隨機分組配對結果</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: DFKai-sb, Arial, sans-serif;
         }
 
         .container {
@@ -14,19 +14,20 @@
         .result-wrapper {
             margin-top: 20px;
         }
-
         .team {
             margin-bottom: 20px;
         }
 
         .team-title {
             font-weight: bold;
+            font-size: 25px;
         }
 
         .member-list {
             list-style-type: none;
             margin: 0;
             padding: 0;
+            font-size: 18px;
         }
 
         .member {
@@ -42,20 +43,22 @@
     <div class="container">
         <div class="result-wrapper">
             <h1>隨機分組配對結果</h1>
+            <span style="font-family:DFKai-sb;">
             {% for team in teams %}
                 <div class="team">
                     <p class="team-title">Team {{ loop.index }}</p>
                     <ul class="member-list">
                         {% for member in team %}
-                            <li class="member">{{ member["Name"] }} ({{ member["Gender"] }})</li>
+                            <li class="member">{{ member[1] }} ({{ member[2] }})</li>
                         {% endfor %}
                     </ul>
                 </div>
             {% endfor %}
+            </span>
         </div>
         <div class="download-links">
             <a href="/download_csv?csv_file_path={{ csv_file_path }}">Download as CSV</a>
-            <a href="/download_pdf?pdf_file_path={{ pdf_file_path }}">Download as PDF</a>
+            <!--- <a href="/download_pdf?pdf_file_path={{ pdf_file_path }}">Download as PDF</a> --->
         </div>
     </div>
 </body>
